--- a/app/sass/_mixins.sass
+++ b/app/sass/_mixins.sass
@@ -103,3 +103,10 @@
     border-style: solid
     border-width: 11.5px 0 11.5px 21px
     border-color: transparent transparent transparent #ffffff
+
+=hover-effect
+  transition: all 0.3s ease-out
+  -webkit-transition: all 0.3s ease-out
+  -moz-transition: all 0.3s ease-out
+  -ms-transition: all 0.3s ease-out
+  -o-transition: all 0.3s ease-out
