--- a/app/sass/_header.sass
+++ b/app/sass/_header.sass
@@ -1,5 +1,5 @@
 header
-  background: #000
+  background: #7690c5
   position: relative
   +min-width-768
     position: absolute
@@ -41,7 +41,7 @@ header
   &__item
     text-align: center
     &:hover
-      background: rgba(42, 108, 120, 1)
+      background: rgba(0, 0, 0, 1)
     &--link
       font-size: 17px
       color: #ffffff
@@ -60,7 +60,7 @@ header
       padding-bottom: 5px
       &:hover
         background: transparent
-        box-shadow: inset 0 -2px 0 0 rgba(0,0,0,0.5)
+        box-shadow: inset 0 -2px 0 0 rgba(60, 97, 173, 1)
 
 .button--toggle
   position: absolute
